OO-9285: make applicant only invitee